--- a/pub.html
+++ b/pub.html
@@ -64,10 +64,10 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/ccs19.pdf" target="_blank">pdf</a> | <a href="pub/ccs19.bib" target="_blank">bib</a>]
 						<br>
-            Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Tianyin Xu,
+            Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Haochen Huang, Tianyin Xu,
             Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
 						<br>
-						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 11-15, 2019.
+						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS '19</b></font>), London, UK, Nov. 11-15, 2019.
 					</span>
 				</div>
 			</td>
@@ -84,7 +84,7 @@ td.papers {
             David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andy Newell, Sonia Margulis, Lin Xiao,
             Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
 						<br>
-						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'19</b></font>), Huntsville, Ontario, Canada, Oct. 27-30, 2019.
+						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP '19</b></font>), Huntsville, Ontario, Canada, Oct. 27-30, 2019.
 					</span>
 				</div>
 			</td>
@@ -100,7 +100,7 @@ td.papers {
 						<br>
             Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
-						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct 21-25, 2019.
+						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom '19</b></font>), Los Cabos, Mexico, Oct 21-25, 2019.
 					</span>
 				</div>
 			</td>
@@ -116,7 +116,7 @@ td.papers {
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
-						In Proceedings of the 18th Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Boston, MA, Oct. 31 - Nov. 2, 2018.
+						In Proceedings of the 18th Internet Measurement Conference (<font color="#083b89"><b>IMC '18</b></font>), Boston, MA, Oct. 31 - Nov. 2, 2018.
 					</span>
 				</div>
 			</td>
@@ -132,7 +132,7 @@ td.papers {
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
-						In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'18</b></font>), Carlsbad, CA, Oct. 8-10, 2018.
+						In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI '18</b></font>), Carlsbad, CA, Oct. 8-10, 2018.
 						</span>
 				</div>
 			</td>
@@ -148,7 +148,7 @@ td.papers {
 						<br>
 						Tianyin Xu and Darko Marinov
 						<br>
-						In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE'18, NIER</b></font>), Gothenburg, Sweden, May 27-Jun. 3, 2018.
+						In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE '18, NIER</b></font>), Gothenburg, Sweden, May 27-Jun. 3, 2018.
 					</span>
 				</div>
 			</td>
@@ -164,7 +164,7 @@ td.papers {
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
 						<br>
-						In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018.
+						In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST '18</b></font>), Oakland, CA, Feb. 12-15, 2018.
 					</span>
 				</div>
 			</td>
@@ -180,7 +180,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), Denver, CO, May 6-11, 2017.
+						In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI '17</b></font>), Denver, CO, May 6-11, 2017.
 					</span>
 				</div>
 			</td>
@@ -196,7 +196,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
 						<br>
-						In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'16</b></font>), Savannah, GA, Nov. 2-4, 2016.
+						In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI '16</b></font>), Savannah, GA, Nov. 2-4, 2016.
 						<br>
 						<font color="#C40233"><b>Jay Lepreau Best Paper Award</b></font>
 					</span>
@@ -214,7 +214,7 @@ td.papers {
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'16</b></font>), Singapore, Singapore, Jun. 26-30, 2016.
+						In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys '16</b></font>), Singapore, Singapore, Jun. 26-30, 2016.
 					</span>
 				</div>
 			</td>
@@ -230,7 +230,7 @@ td.papers {
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 11th ACM European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'16</b></font>), London, UK, Apr. 18-21, 2016.
+						In Proceedings of the 11th ACM European Conference on Computer Systems (<font color="#083b89"><b>EuroSys '16</b></font>), London, UK, Apr. 18-21, 2016.
 					</span>
 				</div>
 			</td>
@@ -246,7 +246,7 @@ td.papers {
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
 						<br>
-						In Proceedings of the 13th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'16</b></font>), Santa Clara, CA, Mar. 16-18, 2016.
+						In Proceedings of the 13th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI '16</b></font>), Santa Clara, CA, Mar. 16-18, 2016.
 					</span>
 				</div>
 			</td>
@@ -262,7 +262,7 @@ td.papers {
 						<br>
 						Zhenhua Li, Christo Wilson, Tianyin Xu, Yao Liu, Zhen Lu, and Yinlong Wang
 						<br>
-						In Proceedings of the 15th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC'15</b></font>), Tokyo, Japan, Oct. 28-30, 2015.
+						In Proceedings of the 15th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC '15</b></font>), Tokyo, Japan, Oct. 28-30, 2015.
 					</span>
 				</div>
 			</td>
@@ -278,7 +278,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
 						<br>
-						In Proceedings of the 10th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'15</b></font>), Bergamo, Italy, Aug. 31-Sep. 4, 2015.
+						In Proceedings of the 10th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE '15</b></font>), Bergamo, Italy, Aug. 31-Sep. 4, 2015.
 					</span>
 				</div>
 			</td>
@@ -310,7 +310,7 @@ td.papers {
 						<br>
 						Zhenhua Li, Cheng Jin, Tianyin Xu, Christo Wilson, Yao Liu, Linsong Cheng, Yunhao Liu, Yafei Dai, and Zhi-Li Zhang
 						<br>
-						In Proceedings of the 14th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC'14</b></font>), Vancouver, Canada, Nov. 5-7, 2014.
+						In Proceedings of the 14th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC '14</b></font>), Vancouver, Canada, Nov. 5-7, 2014.
 					</span>
 				</div>
 			</td>
@@ -326,7 +326,7 @@ td.papers {
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 19th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'14</b></font>), Salt Lake City, UT, Mar. 1-5, 2014.
+						In Proceedings of the 19th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS '14</b></font>), Salt Lake City, UT, Mar. 1-5, 2014.
 					</span>
 				</div>
 			</td>
@@ -342,7 +342,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
 						<br>
-						In Proceedings of the 24th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'13</b></font>), Farmington, PA, Nov. 3-6, 2013.
+						In Proceedings of the 24th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP '13</b></font>), Farmington, PA, Nov. 3-6, 2013.
 					</span>
 				</div>
 			</td>
