--- a/pub.html
+++ b/pub.html
@@ -65,7 +65,7 @@ td.papers {
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
-						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Boston, Massachusetts, USA, June 8-12, 2020.
+						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Boston, Massachusetts, June 8-12, 2020.
 					</span>
 				</div>
 			</td>
