--- a/pub.html
+++ b/pub.html
@@ -61,7 +61,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Set the Configuration for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/" target="_blank">pdf</a>]
+							<strong>Set the Configurations for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/" target="_blank">pdf</a>]
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
