--- a/index.html
+++ b/index.html
@@ -272,9 +272,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"Join us on UIUC SysNet Slack channels: <a href="https://join.slack.com/t/uiuc-sysnet/signup", target="_blank">uiuc-sysnet.slack.com</a>."</font></b>
                 <br>
-                <b>$ echo <font color="#E84A27">"I'm teaching <a href="https://cs523-uiuc.github.io/fall19/", target="_blank">CS 523: Advanced Operating Systems</a> in Fall 2019. Checkout the <a href="https://cs523-uiuc.github.io/fall19/readings.html", target="_blank">schedule</a>."</font></b>
-		<br>
-		<b>$ echo <font color="#E84A27">"I'm organizing <a href="https://systems-seminar-uiuc.github.io/fall19/", target="_blank">CS 591 (SN): System Reading Group</a> in Fall 2019."</font></b>
+		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io/spring20/", target="_blank">CS 591: UIUC System Seminar</a> with <a href="http://kalim2.web.engr.illinois.edu/", target="_blank">Faria</a> and <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a>."</font></b>
 		<br>
 		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">CS 591 (SE): Software Engineering Seminar</a> in Fall 2019."</font></b>
               </TD>
@@ -336,6 +334,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+						        <p class="STYLE223">Spring 2020 <a href="https://cs423-uiuc.github.io/fall19/" target="_blank">CS 423: Operating System Design</a></p>
                     					<p class="STYLE223">Fall 2019 <a href="https://cs523-uiuc.github.io/fall19/" target="_blank">CS 523: Advanced Operating Systems</a></p>
 						      	<p class="STYLE223">Fall 2019 <a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">CS 591(SN): System Reading Group</a></p>
 						        <p class="STYLE223">Fall 2019 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
