--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                 <br>
 		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io/spring20/", target="_blank">UIUC System Seminar</a> with <a href="http://kalim2.web.engr.illinois.edu/", target="_blank">Faria</a> and <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a>."</font></b>
 		<br>
-		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a> in Fall 2019."</font></b>
+		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a> with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>."</font></b>
               </TD>
                           </TR>
 							          <TD width="0.5%">&nbsp;</TD>
