--- a/index.html
+++ b/index.html
@@ -386,19 +386,29 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-	                <p class="STYLE223">2020 <a href="https://www.sigmobile.org/mobisys/2020/" target="_blank">MobiSys</a>,
+                  <p class="STYLE223">2021
+                    <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
+          	      </p>
+                  <p class="STYLE223">2020
+                    <a href="https://www.sigmobile.org/mobisys/2020/" target="_blank">MobiSys</a>,
+                    <a href="https://edge-sys.github.io/2020/submission.html" target="_blank">EdgeSys</a>,
 	                </p>
-			<p class="STYLE223">2019 <a href="https://www.sigops.org/sosp/sosp19/" target="_blank">SOSP</a>,
-                                                 <a href="https://icsr.zju.edu.cn/apsys2019/" target="_blank">APSys</a>,
-			                         <a href="https://seconfig.github.io/" target="_blank">SEConfig</a>,
-                                                 <a href="https://edgesys19.cm.in.tum.de/" target="_blank">EdgeSys</a>
-                        </p>
-                        <p class="STYLE223">2018 <a href="http://conferences.inf.ed.ac.uk/EuroDW2018/" target="_blank">EuroSys DW</a>, 
-				                 <a href="https://www.sigmobile.org/mobisys/2018/workshops/edgesys18/" target="_blank">EdgeSys</a>, 
-				                 <a href="http://icdcs2018.ocg.at" target="_blank">ICDCS</a>
+			            <p class="STYLE223">2019
+                    <a href="https://www.sigops.org/sosp/sosp19/" target="_blank">SOSP</a>,
+                    <a href="https://icsr.zju.edu.cn/apsys2019/" target="_blank">APSys</a>,
+			              <a href="https://seconfig.github.io/" target="_blank">SEConfig</a>,
+                    <a href="https://edgesys19.cm.in.tum.de/" target="_blank">EdgeSys</a>
+                  </p>
+                  <p class="STYLE223">2018
+                    <a href="http://conferences.inf.ed.ac.uk/EuroDW2018/" target="_blank">EuroSys DW</a>,
+				            <a href="https://www.sigmobile.org/mobisys/2018/workshops/edgesys18/" target="_blank">EdgeSys</a>,
+				            <a href="http://icdcs2018.ocg.at" target="_blank">ICDCS</a>
 	                </p>
-                        <p class="STYLE223">2017 <a href="https://www.sigops.org/sosp/sosp17/src.html" target="_blank">SOSP SRC</a></p>
-                        <p class="STYLE223">2015 <a href="https://www.usenix.org/conference/lisa15" target="_blank">USENIX LISA</a> (academic review committee)</p>
+                  <p class="STYLE223">2017
+                    <a href="https://www.sigops.org/sosp/sosp17/src.html" target="_blank">SOSP SRC</a>
+                  </p>
+                  <p class="STYLE223">2015
+                    <a href="https://www.usenix.org/conference/lisa15" target="_blank">USENIX LISA</a> (academic review committee)</p>
                           </TD>
                       </TR>
 
@@ -418,7 +428,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223">Andrew Yoo</p>
                              </TD>
                           </TR>
-			      
+
 	             <TD width="0.5%">&nbsp;</TD>
                           <TR>
                           <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat alumni</b></span></TD>
