--- a/pub.html
+++ b/pub.html
@@ -81,6 +81,8 @@ td.papers {
             					Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						<br>
 						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Lausanne, Switzerland, Mar. 16-20, 2020.
+						<br>
+						<font color="#C40233"><b>Best Paper Award</b></font>
 					</span>
 				</div>
 			</td>
