--- a/pub.html
+++ b/pub.html
@@ -55,7 +55,7 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
-	  
+
     <td class="date"><font color="#083b89">Sigmetrics'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
@@ -70,7 +70,7 @@ td.papers {
 				</div>
 			</td>
 		</tr>
-	
+
     <td class="date"><font color="#083b89">ASPLOS'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
@@ -104,6 +104,23 @@ td.papers {
 		</tr>
 
     <tr>
+      <td class="date"><font color="#083b89">CCS'19</font></td>
+      	<td class="papers">
+    			<div align="justify" class="STYLE4">
+    					<p></p>
+    						<span style="font-size: 12pt;">
+    							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/pdiff.pdf" target="_blank">pdf</a>]
+    						<br>
+                					Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Haochen Huang, Tianyin Xu,
+                					Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
+    						<br>
+    						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 11-15, 2019.
+    					</span>
+    				</div>
+    			</td>
+    		</tr>
+
+    <tr>
     	<td class="date"><font color="#083b89">SOSP'19</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
@@ -135,7 +152,7 @@ td.papers {
 			</div>
 		</td>
 	</tr>
-	
+
 	<tr>
     	<td class="date"><font color="#083b89">IMC'18</font></td>
   		<td class="papers">
@@ -265,7 +282,7 @@ td.papers {
 				</div>
 			</td>
 		</tr>
-	
+
 		<tr>
 			<td class="date"><font color="#083b89">arXiv</font></td>
 			<td class="papers">
