--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
 	          <p class="STYLE223">2025
+		    <a href="https://www.usenix.org/conference/osdi25" target="_blank">OSDI</a>,
 		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers/" target="_blank">ASPLOS</a>,
 		    <a href="https://www.usenix.org/conference/nsdi25" target="_blank">NSDI</a>,
 		    <a href="https://hpca-conf.org/2025/" target="_blank">HPCA</a>,
