--- a/index.html
+++ b/index.html
@@ -439,6 +439,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<a href="pub/lpc-linux-testing.pdf" target="_blank">the Refereed Track</a>, 
 								<a href="pub/lpc-2024-2.pdf" target="_blank">Kernel Testing & Dependability</a>, 
 								and <a href="pub/lpc-2024-3.pdf">Safe Systems with Linux</a></p>
+							<p class="STYLE223">Anvil and Acto are on USENIX ;login: (see 
+								<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">Anvil</a> and 
+								<a href="https://www.usenix.org/publications/loginonline/acto-push-button-end-end-testing-operation-correctness-kubernetes-operators" target="_blank">Acto</a>)</p>
 							<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable</p>
 							<p class="STYLE223">Making Linux Fly: Towards Certified Linux Kernel at <a href="https://elisa.tech/event/elisa-seminar-making-linux-fly-towards-certified-linux-kernel/" target="_blank">the ELISA Seminar</a> and <a href="pub/lpc-linux-testing.pdf" target="_blank">Linux Plumbers Conference (LPC) 2024</a></p>
 							<p class="STYLE223"><a href="pub/srecon24americas_slides-xu.pdf" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at <a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">SREcon24 Americas</a></p>
