--- a/index.html
+++ b/index.html
@@ -589,7 +589,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	-->							<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Quan Hao Ng</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mark Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
+								<p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a>, Undergraduate Student (Zhejiang University) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Linkai Song</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shurang Wu</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
