--- a/pub.html
+++ b/pub.html
@@ -90,6 +90,10 @@ td.papers {
 						  In Proceedings of the 2025 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'25</b></font>), Boston, MA, Jul. 2025.
 						  <br>
 						  Project: <a href="https://github.com/rex-rs/rex" target="_blank">https://github.com/rex-rs/rex</a>
+						  <br>
+						  <font color="#C40233">
+					            <b>Selected for presentation by <a href="https://ossna2025.sched.com/event/1zfpE" target="_blank">Open Source Summit 2025</a></b>
+					          </font>
 					  	</span>
 				  </div>
 		</td>
