--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,7 +90,7 @@ td.papers {
 	    <br>
 	    Reliable Cloud System Management: Challenges and Tools
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on Apr. 8, 2025.
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
             <br>
             Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
           </span>
