--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		          <TD width="0.5%">&nbsp;</TD>
 
 					  <TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ha id="ha"></A></span><b>$ head <a href="award.html">awards</a></b></span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ha id="ha"></A></span><b>$ head awards</b></span></TD>
 					      </TR>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
@@ -437,7 +437,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
             </TR>
                     <TD width="0.5%">&nbsp;</TD>
                       <TR>
-                        <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ha id="ha"></A></span><b>$ cat impact</b></span></TD>
+                        <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ha id="ha"></A></span><b>$ cat impacts</b></span></TD>
                           </TR>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
