--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -187,24 +187,6 @@ td.papers {
         </div>
       </td>
   </tr>
-
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
-            <strong><a href="https://marshtompsxd.github.io" target="_blank">Xudong Sun</a></strong>
-	    <br>
-	    Testing and Verification of Cloud Infrastructure Systems
-	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 17, 2024.
-            <br>
-            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
-          </span>
-        </div>
-      </td>
-  </tr>
 	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -219,6 +201,24 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 3, 2024.
             <br>
             Advisor: <a href="https://csl.illinois.edu/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://marshtompsxd.github.io" target="_blank">Xudong Sun</a></strong>
+	    <br>
+	    Testing and Verification of Cloud Infrastructure Systems
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on May 7, 2025. 
+            <br>
+            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
           </span>
         </div>
       </td>
