--- a/pub.html
+++ b/pub.html
@@ -85,7 +85,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 						  <strong>Rex: Closing the language-verifier gap with safe and usable kernel extensions</strong> [<a href="pub/rex.pdf" target="_blank">pdf</a> | <a href="pub/rex_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Jinghao Jia, Ruowen Qin, Milo Craun, Egor Lukiyanov, Ayush Bansal, Michael V. Le, Hubertus Franke, Hani Jamjoom, Tianyin Xu, and Dan Williams
+						  Jinghao Jia, Ruowen Qin, Milo Craun, Egor Lukiyanov, Ayush Bansal, Minh Phan, Michael V. Le, Hubertus Franke, Hani Jamjoom, Tianyin Xu, and Dan Williams
 						  <br>
 						  In Proceedings of the 2025 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'25</b></font>), Boston, MA, Jul. 2025.
 						  <br>
