--- a/pub.html
+++ b/pub.html
@@ -149,6 +149,8 @@ td.papers {
 						  Yan Sun, Jongyul Kim, Zeduo Yu, Jiyuan Zhang, Siyuan Chai, Michael Jaemin Kim, Hwayong Nam, Jaehyun Park, Eojin Na, Yifan Yuan, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
 						  <br>
 						  In Proceedings of the 30th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
+						  <br>
+						  Artifact: <a href="https://github.com/ece-fast-lab/ASPLOS-2025-M5" target="_blank">https://github.com/ece-fast-lab/ASPLOS-2025-M5</a>
 					  	</span>
 				  </div>
 		</td>
