--- a/pub.html
+++ b/pub.html
@@ -119,6 +119,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">arXiv</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Testing Access-Control Configuration Changes for Web Applications</strong> [<a href="https://arxiv.org/pdf/2505.12770" target="_blank">pdf</a> | <a href="pub/actest_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Chengcheng Xiang, Li Zhong, Eric Mugnier, Nathaniel Nguyen, Yuanyuan Zhou, and Tianyin Xu
+						  <br>
+						  arXiv:2505.12770, May 2025.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">EuroSys'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
